[package]
edition = "2021"
name = "pico-github-stars"
authors = ["kromych"]
version = "0.1.0"
license = "MIT OR Apache-2.0"

[features]
use-rom-instrinsics = []
default = ["use-rom-instrinsics"]

[dependencies]
bitfield-struct = "0.9"

cyw43 = { version = "0.2", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.2", features = ["defmt"] }
embassy-embedded-hal = { version = "0.2", features = ["defmt"] }
embassy-executor = { version = "0.6", features = ["task-arena-size-163840", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1" }
embassy-net = { version = "0.4", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4"] }
embassy-rp = { version = "0.2", features = ["defmt", "intrinsics", "rom-v2-intrinsics", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }

defmt = "0.3"
defmt-rtt = "0.4"

serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.6"

#cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
portable-atomic = { version = "1.10", features = ["critical-section"] }
rand = { version = "0.8",  default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
static_cell = "2.1"

embedded-io-async = { version = "0.6", features = ["defmt-03"] }
embedded-nal-async = { version = "0.7"}
embedded-tls = { git = "https://github.com/drogue-iot/embedded-tls", rev = "7936bc11c123260065b5b9776b584308ad2e8f8a", features = ["defmt"], default-features = false}

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
