[package]
edition = "2021"
name = "pico-github-stars"
authors = ["kromych"]
version = "0.1.0"
license = "MIT OR Apache-2.0"

[features]
use-rom-instrinsics = []
default = ["use-rom-instrinsics"]

[dependencies]
bitfield-struct = "0.9"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
portable-atomic = { version = "1.10", features = ["critical-section"] }

cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"
fugit = "0.3"
rp-pico = "0.9"
rp2040-boot2 = "0.3"
rp2040-hal = "0.10"
rp2040-pac = "0.6"

embedded-graphics = "0.8"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
