[package]
edition = "2021"
name = "pico-github-stars"
authors = ["kromych"]
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
bitfield-struct = "0.9"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
portable-atomic = { version = "1.10", features = ["critical-section"] }

cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"
fugit = "0.3"
rp-pico = "0.9"
rp2040-boot2 = "0.3"
rp2040-hal = "0.10"
rp2040-pac = "0.6"
embedded-graphics = "0.8"
libm = "0.2"
rand = { version = "0.8",  default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }

[profile.release]
debug = 2
lto = true
opt-level = 3

[profile.dev]
debug = 2
lto = true
opt-level = "z"
